<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">

    <Button
        android:id="@+id/create_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_text_create_test"
        android:drawableLeft="@drawable/btn_create_test"
        android:drawableStart="@drawable/btn_create_test"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/resume_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_text_resume_test"
        android:drawableLeft="@drawable/btn_resume_test"
        android:drawableStart="@drawable/btn_resume_test"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/review_tests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/review_tests"
        android:drawableLeft="@drawable/btn_review_test"
        android:drawableStart="@drawable/btn_review_test"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/manage_tests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_text_manage_tests"
        android:drawableLeft="@drawable/btn_manage_tests"
        android:drawableStart="@drawable/btn_manage_tests"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
