<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/additional_info_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/current_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/question" />

        <TextView
            android:id="@+id/right_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/right" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:gravity="end" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/divider"
        android:layout_below="@+id/additional_info_wrapper"/>

    <TextView
        android:id="@+id/question"
        android:layout_below="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <ListView
        android:id="@+id/answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_above="@+id/buttons_wrapper"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/buttons_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_text_prev"
            style="?android:borderlessButtonStyle"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_text_next"
            style="?android:borderlessButtonStyle"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

</RelativeLayout>